--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+#toggle:checked ~ label div.toggle-dot {
+  @apply md:-translate-x-7;
+  @apply bg-gray-600;
+}
+
+#toggle:checked ~ label div.parent {
+  @apply bg-gray-200;
+}
+
 @layer utilities {
   .section-min-height {
     min-height: calc(100vh - 68px);
